<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brain Trainer</string>
    <string name="menu_main">Main Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    
    <string name="start_button">Start!</string>
    <string name="settings_button">Settings</string>
    <string name="about_button">About</string>
    <string name="reset_highscore_button">Reset</string>
    <string name="share">Share</string>
    
    <string name="reset_highscore_text">Reset Highscore</string>
    <string name="activity_title_settings">Settings</string>
    <string name="timer_switch_text">Question time limits</string>
    <string name="logic_questions_switch_text">Logic</string>
    <string name="pattern_recognition_questions_switch_text">Pattern Recognition</string>
    <string name="spatial_questions_switch_text">Spatial</string>
    <string name="classification_questions_switch_text">Classification</string>
    <string name="mathematical_questions_switch_text">Mathematical</string>
    <string name="visualisation_questions_switch_text">Visualisation</string>
    <string name="verbal_questions_switch_text">Verbal</string>
    <string name="finished_text">Questions complete!  Your Results&#8230;\n</string>
    
    <string name="title_question_types">Question Types</string>
    <string name="title_other_settings">Other Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_memory">Memory</string>
    <string name="title_activity_verbal">Verbal</string>
    <string name="title_activity_mathematics">Mathematics</string>
    <string name="title_activity_spatial">Spatial</string>
    <string name="title_activity_pattern_recognition">Pattern Recognition</string>
    <string name="title_activity_logic">Logic</string>
    <string name="title_activity_visual">Visual</string>
    <string name="title_activity_classification">Classification</string>
    <string name="title_check_answer">Check Answer</string>
    <string name="title_activity_finish">Finish</string>
    
    <string name="action_settings">Settings</string>
    <string name="about_description_text">Thanks for downloading Brain Trainer!\n\nThis app contains lots of mind bending exercises to train your brain.\n\nYou can choose the types of questions you want to practice or you can just let the app decide for you.\n\nSuggestions/comments: chris@cjwfuller.com\n\nCredits:\n\nSounds: www.freesound.org</string>
    <string name="hello_world">Hello world!</string>
    <string name="memory_instructions_text">Remember where the greens are!</string>
    <string name="logic_instructions_text">Put the numbers in ascending order!  To move tiles, touch ones with empty slots next to them</string>
    <string name="memory_instructions_after_green_text">Where were the greens?</string>
    <string name="maths_instructions_text">Which number comes next?</string>
    <string name="verbal_instructions_text">Rearrange this text into a word and choose the category that it belongs to</string>
    <string name="classification_instructions_text">Which word does not belong?</string>
    <string name="answer_label_text">Answer:</string>
    
    <string name="memory_time_left">Time Left: \n\n</string>
    <string name="red_oval">Red Oval</string>
    <string name="blue_oval">Blue Oval</string>
    <string name="heart">Heart</string>
    <string name="lives_text">Lives: </string>
    <string name="pattern_recognition_instructions">Which picture follows logically from the following?</string>
    <string name="check_answer_text">Where you correct?</string>
    <string name="check_answer_button">Next</string>
    <string name="skip_question">Skip</string>
    
    <string name="logic_score_text">Logic: </string>
    <string name="classification_score_text">Classification: </string>
    <string name="verbal_score_text">Verbal: </string>
    <string name="memory_score_text">Memory: </string>
    <string name="mathematical_score_text">Mathematics: </string>
    
    <string name="main_menu">Main Menu</string>
    <string name="play_again">Play Again!</string>

</resources>
