<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Finish" >
     <TextView
        android:id="@+id/answers_intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/finished_text" />
     <TextView
        android:id="@+id/score_text"
        android:layout_below="@+id/answers_intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_centerHorizontal="true" />      
     <TextView
        android:id="@+id/logic_score_text"
        android:layout_below="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logic_score_text"
        android:textSize="30sp"
        android:layout_centerHorizontal="true" />   
     <TextView
        android:id="@+id/classification_score_text"
        android:layout_below="@+id/logic_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classification_score_text"
        android:textSize="30sp"
        android:layout_centerHorizontal="true" /> 
     <TextView
        android:id="@+id/verbal_score_text"
        android:layout_below="@+id/classification_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verbal_score_text"
        android:textSize="30sp"
        android:layout_centerHorizontal="true" /> 
     <TextView
        android:id="@+id/memory_score_text"
        android:layout_below="@+id/verbal_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_score_text"
        android:textSize="30sp"
        android:layout_centerHorizontal="true" /> 
     <TextView
        android:id="@+id/mathematical_score_text"
        android:layout_below="@+id/memory_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mathematical_score_text"
        android:textSize="30sp"
        android:layout_centerHorizontal="true" />                                                    
    <com.google.android.gms.ads.AdView 
       android:id="@+id/adView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_alignParentBottom="true"
       android:layout_marginTop="18dp"
       ads:adUnitId="ca-app-pub-9379479464831132/1442722003"
       ads:adSize="BANNER" /> 
</RelativeLayout>
