<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".MainActivity" >
    <TextView
        android:id="@+id/highscore_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_button"
        android:textSize="40sp" />
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_purple"
        style="@style/ButtonText"
        android:textSize="150sp"
        android:width="300dp"
        android:textStyle="bold"
        android:text="@string/start_button" />
    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_purple"
        style="@style/ButtonText"
        android:textSize="50sp"
        android:width="300dp"
        android:text="@string/settings_button"
        android:layout_below="@+id/start_button" />    
    <Button
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_purple"
        style="@style/ButtonText"
        android:textSize="50sp"
        android:width="300dp"
        android:text="@string/about_button"
        android:layout_below="@+id/settings_button"/>                    

</RelativeLayout>
